# itusct_autonomous

./: Calculator.cpp  README.md  main.cpp
weekly_assignment_1/: README.md
weekly_assignment_1/Calculator/: Calculator.hpp  README.md
weekly_assignment_1/Point_structure/: README.md  point_structure.cpp
weekly_assignment_1/matrix/: README.md  main.cpp  matrix.cpp  matrix.hpp  matrixProgram
weekly_assignment_2/c++_pointers/: README.md
weekly_assignment_2/c++_variables/: README.md  c++_variables.cpp
weekly_assignment_4/: main.cpp  menu.cpp  menu.hpp  menu.json  restaurant_bot
weekly_assignment_5/: CMakeLists.txt  README.md  goal_generator.cpp  planner_launch.py  simple_path_planner.cpp
